# mathy

./: CMakeLists.txt  README.md  main.cpp
Google_tests/: CMakeLists.txt  arithmetic_test.cpp  fraction_test.cpp
include/: arithmetic.h  fraction.h
